manifests/deployment-blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-web-blue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: python-web
      version: blue
  template:
    metadata:
      labels:
        app: python-web
        version: blue
    spec:
      containers:
        - name: python-web
          image: gcr.io/my-gitops-project/python-web:v1.0.0
          ports:
            - containerPort: 5000
