manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-web-service
spec:
  ports:
    - port: 80
      targetPort: 5000
  selector:
    app: python-web
  type: ClusterIP
