manifests/istio-destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: python-web-dr
spec:
  host: python-web-service
  subsets:
    - name: blue
      labels:
        version: blue
    - name: green
      labels:
        version: green
