manifests/istio-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: python-web-vs
spec:
  hosts:
    - "example.com"  # Default, replaced by Kustomize
  gateways:
    - python-web-gateway
  http:
    - route:
        - destination:
            host: python-web-service
            subset: blue
          weight: 100
        - destination:
            host: python-web-service
            subset: green
          weight: 0
